Fixed alignment in submit project form

--- a/my-site/public/styles/unit.css
+++ b/my-site/public/styles/unit.css
@@ -1197,3 +1197,7 @@
 .breadcrumb>li.inactive {
 	display: none;
 }
+
+.row {
+	margin: 0;
+}
